@@ -29,6 +29,8 @@ import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
@@ -208,7 +210,7 @@ public class InserimentoInserzioneController extends AbstractController implemen
         tipologiaMenuButton.setText(tipo);
         tipologiaMenuButton.setStyle(FX_TEXT_FILL_MENU_BUTTON);
     }
-    
+
     private void setupClasseEnergeticaMenuButton() {
         a4MenuItem.setOnAction(event -> impostaClasseEnergetica("A4"));
         a3MenuItem.setOnAction(event -> impostaClasseEnergetica("A3"));
@@ -221,7 +223,7 @@ public class InserimentoInserzioneController extends AbstractController implemen
         fMenuItem.setOnAction(event -> impostaClasseEnergetica("F"));
         gMenuItem.setOnAction(event -> impostaClasseEnergetica("G"));
     }
-    
+
     private void impostaClasseEnergetica(String classeEnergetica) {
         classeEnergeticaMenuButton.setText(classeEnergetica);
         classeEnergeticaMenuButton.setStyle(FX_TEXT_FILL_MENU_BUTTON);
@@ -299,10 +301,14 @@ public class InserimentoInserzioneController extends AbstractController implemen
         this.selectedImageList.clear();
         for (String imageUrl : imageUrls) {
             try {
-                File file = new File(new URL(imageUrl).toURI());
+                URI uri = URI.create(imageUrl);
+                Path path = Paths.get(uri);
+                File file = path.toFile();
                 this.selectedImageList.add(file);
+            } catch (IllegalArgumentException e) {
+                logger.error("URL non valido: {}", imageUrl, e);
             } catch (Exception e) {
-                logger.error("Errore durante la conversione dell'URL in File: {}", e.getMessage());
+                logger.error("Errore durante la conversione dell'URL in File: {}", e.getMessage(), e);
             }
         }
         updateImageThumbnails();
